Fixed Donwload on swagger doc
